[package]
name = "randical"
version = "1.6.180"
authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
edition = "2021"

description = "A simple UNIX commandline utility to generate sequences of random values of different types."

repository = "https://github.com/nebkor/randical"

readme = "README.md"

keywords = ["unix", "commandline", "bin", "cli", "random"]

categories = ["command-line-utilities"]

license = "GPL-3.0-or-later"

maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.8"
clap = "2"
uuid = { version = "0.8", default-features = false }
